Refactor code structure and advanced in some types to then work on the solution

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,6 +71,16 @@
         "xmemory": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "*.tcc": "cpp",
+        "cwctype": "cpp",
+        "deque": "cpp",
+        "set": "cpp",
+        "memory_resource": "cpp",
+        "random": "cpp",
+        "string_view": "cpp",
+        "numbers": "cpp",
+        "variant": "cpp",
+        "cinttypes": "cpp"
     }
 }
